feat: finished implementing create view
